--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^7.0.1
+  modal_bottom_sheet: ^2.1.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
